--- a/lookandfeel.conf
+++ b/lookandfeel.conf
@@ -2,7 +2,7 @@
 ### Dedicated to the public domain as stated in https://unlicense.org/
 ### by marav - 2021
 
-### This file source the /usr/bin/lookandfeel script
+### This is the configuration file for the /usr/bin/lookandfeel script
 ### Themes available (lookandfeeltool -l) : 
 ###    org.kde.breeze.desktop
 ###    org.kde.breezetwilight.desktop
