--- a/lookandfeel.conf
+++ b/lookandfeel.conf
@@ -2,7 +2,8 @@
 ### Dedicated to the public domain as stated in https://unlicense.org/
 ### by marav - 2021
 
-### This is the configuration file for the /usr/bin/lookandfeel script
+### lookandfeel main configuration file 
+###
 ### Themes available (lookandfeeltool -l) : 
 ###    org.kde.breeze.desktop
 ###    org.kde.breezetwilight.desktop
@@ -16,7 +17,7 @@ DAY_THEME="org.kde.breezetwilight.desktop"
 NIGHT_THEME="org.kde.breezedark.desktop"
 
 # light theme starts at HHmm
-START="0600"
+# START="0700"
 
 # Twilight theme ends at HHmm
-END="2200"
+# END="2100"
